云台代码初次提交

--- a/MDK-ARM/sentry_chassis/sentry_chassis.build_log.htm
+++ b/MDK-ARM/sentry_chassis/sentry_chassis.build_log.htm
@@ -21,24 +21,22 @@ Target DLL:      Segger\JL2CM3.dll V2.99.40.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
-D:\workspace\2022_HAL_sentry\MDK-ARM\sentry_chassis.uvprojx
+d:\workspace\2022_HAL_sentry\MDK-ARM\sentry_chassis.uvprojx
 Project File Date:  11/22/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'F:\keil5\ARM\ARMCC\Bin'
 Build target 'sentry_chassis'
-compiling Task_Chassis.c...
-..\TASK\Task_Chassis\Task_Chassis.c(328): warning:  #1-D: last line of file ends without a newline
-  }
-..\TASK\Task_Chassis\Task_Chassis.c(33): warning:  #177-D: variable "pfifo_upper_computer"  was declared but never referenced
-  static fifo_rx_def *pfifo_upper_computer = &fifo_usart2_rx;
-..\TASK\Task_Chassis\Task_Chassis.c(34): warning:  #177-D: variable "buff_read"  was declared but never referenced
-  static	 uint8_t buff_read[128];
-..\TASK\Task_Chassis\Task_Chassis.c: 3 warnings, 0 errors
+compiling gimbal_behaviour.c...
+..\CONTROL\gimbal_behaviour\gimbal_behaviour.c(25): warning:  #550-D: variable "Friction_wheel_mode"  was set but never used
+  static Shoot_WorkStatus_e Friction_wheel_mode = STOP_SHOOT; // 火控射速控制量
+..\CONTROL\gimbal_behaviour\gimbal_behaviour.c(26): warning:  #177-D: variable "Fire_mode"  was declared but never referenced
+  static Fire_WorkStatus_e Fire_mode = STOP_FIRE;            // 火控开火模式控制量
+..\CONTROL\gimbal_behaviour\gimbal_behaviour.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=18708 RO-data=692 RW-data=204 ZI-data=21412  
+Program Size: Code=18668 RO-data=692 RW-data=204 ZI-data=21412  
 FromELF: creating hex file...
-"sentry_chassis\sentry_chassis.axf" - 0 Error(s), 3 Warning(s).
+"sentry_chassis\sentry_chassis.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -62,7 +60,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.5.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
